--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,11 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-ui-router": "^0.3.1"
+    "angular-ui-router": "^0.3.1",
+    "jquery.touchSlider": "^1.1.6",
+    "swiper": "^3.4.0",
+    "slider": "^1.0.1",
+    "flickity": "^2.0.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
