--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "jquery.touchSlider": "^1.1.6",
     "swiper": "^3.4.0",
     "slider": "^1.0.1",
-    "flickity": "^2.0.5"
+    "flickity": "^2.0.5",
+    "owl.carousel": "^2.1.6"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
