--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "swiper": "^3.4.0",
     "slider": "^1.0.1",
     "flickity": "^2.0.5",
-    "owl.carousel": "^2.1.6"
+    "owl.carousel": "^2.1.6",
+    "countUp.js": "countup#^1.7.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
